[tool.poetry]
name = "pyrhout"
version = "0.1.0"
description = ""
authors = ["Audun Nes"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
types-Flask = "^1.1.3"
waitress = "^2.1.2"
types-waitress = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.5b2"
pre-commit = "^2.13.0"
pytest-cov = "^2.12.1"
bandit = "^1.7.0"
isort = "^5.8.0"
mypy = "^0.902"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.format]
max-line-length=88
